# feastly-api

./: .env  Cargo.toml  dwdawd.json
src/: api.rs  api_structs.rs  db.rs  fetch_data.rs  main.rs  models.rs
