[package]
name = "feastly-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.6.5"
actix-web = "4.4.0"
chrono = "0.4.31"
dotenv = "0.15.0"
env_logger = "0.10.1"
futures = "0.3.30"
log = "0.4.20"
mongodb = "2.8.2"
reqwest = { version = "0.11.23", features = ["json"]}
serde = "1.0.193"
serde_json = "1.0.117"
sqlx = { version = "0.7.3", features = ["sqlite", "macros", "runtime-tokio-rustls"] }
thiserror = "1.0.61"
tokio = { version = "1.35.1", features = ["full"] }
